Fixed spacing and alignment issues for BottomSheets

--- a/react_webviews/src/common/ui/BottomSheet/WVBottomSheet.scss
+++ b/react_webviews/src/common/ui/BottomSheet/WVBottomSheet.scss
@@ -22,7 +22,7 @@ body[data-device="web"]{
   }
 
   .MuiDialogActions-root {
-    margin: 0;
+    margin: 0 20px 20px;
   }
 }
 
@@ -52,7 +52,7 @@ body[data-device="web"]{
       line-height: 21px;
       color: var(--steelgrey);
       word-break: break-word;
-      margin: 20px 0;
+      margin-top: 20px;
     }
 
     .wv-bcl-subtitle::first-letter {
@@ -62,16 +62,14 @@ body[data-device="web"]{
 
   .wv-bc-right {
     margin-left: 20px;
-
-    // .wv-bcr-image {
-    // }
   }
-  
+}
+
+.wv-bottomsheet-child-content {
+  margin-top: 20px;
 }
 
 /* Actions Section */
 .wv-bottomsheet-actions {
-  padding: 20px;
   margin: 0 !important;
-  display: flex;
 }
